<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vision.contactsharingapp.HomeActivity">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"

        android:orientation="vertical">

        <Button
            android:id="@+id/Scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_weight="0.03"
            android:backgroundTint="@color/common_google_signin_btn_text_dark_pressed"
            android:text="@string/Scan" />

        <Button
            android:id="@+id/Myinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/Scan"
            android:layout_marginTop="77dp"
            android:layout_weight="0.03"
            android:backgroundTint="@color/cast_libraries_material_featurehighlight_text_body_color"
            android:onClick="clickinfo"
            android:text="@string/myinfo" />

        <Button
            android:id="@+id/ShowQR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/Myinfo"
            android:layout_marginTop="79dp"
            android:layout_weight="0.03"
            android:background="@color/zxing_status_text"
            android:onClick="clickshow"
            android:text="@string/ShowQR" />

    </LinearLayout>

</RelativeLayout>
